# 2025-2026

./: CONTRIBUTING.md  DEVLOG.md  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
Rover/Drivers/: central.py
Rover/UMRS/: Cargo.toml
Rover/UMRS/src/: kalman.rs  main.rs
docker/: README.md
docs/: Architecture.md  Makefile.md  Setup.md
embeded and low level/: README.md
embeded and low level/2024-2025/src/: main.py  simple_drive.py
embeded and low level/2025-2026/basic control/: ROS2 ubuntu 24.04.md
embeded-low level-electrical/: README.md
embeded-low level-electrical/2024-2025/src/: LightSabers.py  Pico_Encoder.py  actuator_testing.py
embeded-low-level-electrical/: README.md
embeded-low-level-electrical/2024-2025/src/: autoDig.py  motor_testing.py
hardware and low level src code/2024-2025/: README.md
hardware and low level src code/2024-2025/src/: Pico_CAN_Loopback.py  Pico_Display.py  linearactuator.py
hardware/electrical/: README.md
hardware/electrical/can /: README.md
lunarROS/install/: local_setup.sh  setup.sh
lunarROS/log/: latest_build
lunarROS/lunar_control/: CMakeLists.txt  package.xml
ros2_ws/: README.md
sim/models/: README.md
sim/worlds/: README.md
tools/: README.md
ws/: Dockerfile
ws/.devcontainer/: Dockerfile  devcontainer.json
ws/src/hello_world_pkg/: package.xml  setup.cfg  setup.py
ws/src/hello_world_pkg/hello_world_pkg/: talker.py
ws/src/mobile_robot/: CMakeLists.txt  package.xml
ws/src/mobile_robot/launch/: gazebo.launch.py  gazebo_model.launch.py  teleop.launch.py
ws/src/mobile_robot/model/: robot.gazebo  robot.xacro
ws/src/mobile_robot/urdf/: four_wheel_rover.urdf.xacro
(+46 files in other folders)
